manifests/services/09-svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: bienvenucloud-dev
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
