manifests/services/10-svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-db
  namespace: bienvenucloud-dev
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
